--- a/lang/pl.yml
+++ b/lang/pl.yml
@@ -69,16 +69,50 @@ importer-csv:
   successimport: "Dane zostaly poprawnie zaimportowane! Pojawia sie one w zakladce 'Wykresy'."
 modules:
   isactive: "Aktywny"
+  color: "Kolor danych na wykresie"
+  colors:
+    red: "Czerwony"
+    orange: "Pomaranczowy"
+    yellow: "Zolty"
+    green: "Zielony"
+    blue: "Niebieski"
   display:
     header: "Oryginalne dane"
   changepoints:
     header: "Punkty Zmian"
-    cpcount: "Liczba punktow zmian"
-    useowncpcount: "Uzyj wlasnej liczby punktow zmian"
     cpstart: "Pkt. zmiany"
     cpend: "Koniec pkt. zmiany"
     means: "Srednia"
     sigmas: "Odch. std."
+    penalty: "Wartosc parametru wygladzania"
+    costfcs: "Funkcje kosztu"
+    cpoints: "Liczba punktow zmian"
+    cpointsconsider: "Znana liczba pkt. zmian znana"
+    costs:
+      l1: "Najmniejsze odchylenie bezwzgledne"
+      l2: "Najmniej kwadratowe odchylenie "
+      normal: "Zmiana procesu Gaussowskiego"
+      rbf: "Z jadrem Gaussowskim"
+      rank: "Oparta na rangach"
+    pelt:
+      header: "Punkty Zmian - Metoda PELT"
+    binseg:
+      header: "Punkty Zmian - Metoda Segmentacji binarnej"
+    window:
+      header: "Punkty Zmian - Metoda okna przesuwnego"
+      width: "Szerokosc okna"
+    botup:
+      header: "Punkty Zmian - Metoda Segmentacji oddolnej"
+  evaluation:
+    header: "Ewaluacja pkt. zmian"
+    set1: "Zestaw 1"
+    set2: "Zestaw 2"
+    hausdorff: "Metryka Hausdorffa"
+    randindex: "Rand index"
+    precision: "Precyzja"
+    recall: "Wycofanie"
+    margin: "Margines bledu"
+    wrongset: "Niepoprawny zbior indeksow punktow zmian!\nPrzykladowy poprawny format: 1,2,4,9\nMinimalna dlugosc: 3"
   rollingmean: 
     header: "Srednia ruchoma"
     count: "Wielkosc ruchomej"
@@ -89,28 +123,23 @@ modules:
     rollingdisplay: "Odch. std. ruchome"
   differentiation:
     header: "Rozniczowanie"
+    lag: "Opoznienie"
     diffdisplay: "Roznicowane"
-  autocorrelation:
-    header: "Autokorelacja"
+  autocorrelations:
+    header: "Korleogramy"
     lag: "Opoznienie"
-    corr: "Autokorelacja"
-  seasonaldecompose:
-    header: "Dekompozycja Seznonowosci"
+    acorr: "Autokorelacja"
+    partacorr: "Autokorelacja czastkowa"
+  decompose:
+    header: "Dekompozycja na skladowe systematyczne"
     lag: "Opoznienie"
-    model: "Model dekompozycji"
-    seasonal: "Seasonal"
-    trend: "Trend"
-    resid: "Resid"
+    model: "Relacje skladowych"
+    additive: "Model addytywny"
+    multiplicative: "Model multiplikatywny"
+    seasonal: "wahania sezonowe"
+    trend: "trend"
+    resid: "cz. pozostala"
     show: "Wyswietl"
-  rupturemods:
-    pelt:
-      header: "Punkty Zmian - Metoda PELT"
-    binseg:
-      header: "Punkty Zmian - Metoda Segmentacji Binarnej"
-    window:
-      header: "Punkty Zmian - Ruchome okno"
-    dynp:
-      header: "Punkty Zmian - Programowanie dynamiczne"
 messagebox:
   error: "Blad"
   warning: "Ostrzezenie"
